[package]
name = "contest-rank"
version = "0.1.0"
authors = ["ttzztztz <ttzztztz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.2.0", features = ["full"] }
clap = { version = "2.33.3", features = ["yaml"] }
chrono = { version = "0.4.19", features = ["unstable-locales"] }
reqwest = { version = "0.11.1", features = ["json"] }
indexmap = { version = "1.6.1", features = ["std"] }
futures = "0.3.13"
